[package]
name = "gist"
version = "0.1.0"
authors = ["Kenta Sato <tosainu.maple@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "3.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "time"] }
